--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,64 @@
-version: "2.1"
+version: "3.5"
+
 services:
-    mongodb:
-        image: mongo:3.2.11
-        environment:
-            MONGO_INITDB_ROOT_USERNAME: mongo-client
-            MONGO_INITDB_ROOT_PASSWORD: mongo-password
-        volumes: 
-          - ~/.pocket/mongodb:/data/db
-        ports:
-          - "27017:27017"
-        networks:
-          - pocket
-    redis:
-        image: "redis:alpine"
-        command: redis-server
-        ports:
-          - "6379:6379"
-        volumes:
-          - ~/.pocket/redis:/var/lib/redis
-          - ./redis.conf:/usr/local/etc/redis/redis.conf
-        environment:
-          - REDIS_REPLICATION_MODE=master
-        networks:
-          - pocket
+  gateway:
+    image: pocket-network/gateway
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    ports:
+      - 3000:3000
+    volumes:
+      - "./src:/usr/src/gateway/src"
+      - "./dist:/usr/src/gateway/dist"
+    networks:
+      - pocket
+
+  mongodb:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: mongouser
+      MONGO_INITDB_ROOT_PASSWORD: mongopassword
+      MONGO_INITDB_DATABASE: gatewaydb
+    volumes: 
+      - ~/.pocket/mongodb:/data/db
+    ports:
+      - "27017:27017"
+    networks:
+      - pocket
+  
+  redis:
+    image: "redis:alpine"
+    command: redis-server
+    ports:
+      - "6379:6379"
+    environment:
+      - REDIS_REPLICATION_MODE=master
+    networks:
+      - pocket
+
+  tsdb:
+    image: timescale/timescaledb:2.0.2-pg12
+    environment:
+      - POSTGRES_USER=pguser
+      - POSTGRES_PASSWORD=pgpassword
+      - POSTGRES_DB=gatewaydb
+    ports:
+      - 5432:5432
+    networks:
+      - pocket    
+
+  minio:
+    image: minio/minio
+    command: server /data
+    ports:
+      - '9000:9000'
+    environment:
+      MINIO_ACCESS_KEY: gatewayS3AccessKeyId
+      MINIO_SECRET_KEY: gatewayS3SecretAccessKey
+
 networks:
-    pocket:
-        driver: bridge
+  pocket:
+    driver: bridge
