chore: creating proper npm scripts

--- a/.env.example
+++ b/.env.example
@@ -6,15 +6,15 @@ GATEWAY_CLIENT_PRIVATE_KEY=v3rys3cr3tk3yud0nt3venkn0w
 GATEWAY_CLIENT_PASSPHRASE=v3rys3cr3tp4ssphr4ze
 
 # Mongodb env
-MONGO_ENDPOINT=mongodb://mongo-client:mongo-password@mongodb:27017/gateway-local?authSource=admin
+MONGO_ENDPOINT=mongodb://mongo-client:mongo-password@db:27017/gateway-local?authSource=admin
 DATABASE_ENCRYPTION_KEY=xx
 
 # cache
-REDIS_ENDPOINT=redis:6379
+REDIS_ENDPOINT=cache:6379
 REDIS_PORT=6379
 
 # tsdb env
-PG_CONNECTION=postgres://pg-client:pg-password@tsdb:5432/gateway-local
+PG_CONNECTION=postgres://pg-client:pg-password@metricsdb:5432/gateway-local
 PG_CERTIFICATE=PG_PRODUCTION_CERTIFICATE
 
 # s3 protocol creds
