--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "migrate": "node ./dist/migrate",
     "prestart": "npm run build",
     "start": "node -r source-map-support/register .",
-    "clean": "lb-clean dist *.tsbuildinfo .eslintcache"
+    "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
+    "services:db:up": "docker-compose -f stacks/local.yml up db",
+    "services:all:up": "docker-compose -f stacks/local.yml up",
+    "tasks:db:download-production-data": "docker-compose -f stacks/tasks.yml up download-production-data",
+    "tasks:db:persist-production-data": "docker-compose -f stacks/tasks.yml up persist-production-data"
   },
   "repository": {
     "type": "git"
