--- a/stacks/local.yml
+++ b/stacks/local.yml
@@ -5,18 +5,18 @@ services:
     image: pocket-network/gateway
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ../Dockerfile
     env_file:
-      - .env
+      - ../.env
     ports:
       - 3000:3000
     volumes:
-      - "./src:/usr/src/gateway/src"
-      - "./dist:/usr/src/gateway/dist"
+      - "../src:/usr/src/gateway/src"
+      - "../dist:/usr/src/gateway/dist"
     networks:
       - pocket
 
-  mongodb:
+  db:
     image: mongo:latest
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongouser
@@ -29,7 +29,7 @@ services:
     networks:
       - pocket
   
-  redis:
+  cache:
     image: "redis:alpine"
     command: redis-server
     ports:
@@ -39,7 +39,7 @@ services:
     networks:
       - pocket
 
-  tsdb:
+  metricsdb:
     image: timescale/timescaledb:2.0.2-pg12
     environment:
       - POSTGRES_USER=pguser
@@ -50,7 +50,7 @@ services:
     networks:
       - pocket    
 
-  minio:
+  s3:
     image: minio/minio
     command: server /data
     ports:
