--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "prestart": "npm run build",
     "start": "node -r source-map-support/register .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
+    "start:watch": "tsnodemon -x 'node -r source-map-support/register .'",
     "services:db:up": "docker-compose -f stacks/local.yml up db",
-    "services:all:up": "docker-compose -f stacks/local.yml up",
+    "services:all:up": "docker-compose -f stacks/local.yml up --build",
     "tasks:db:download-production-data": "docker-compose -f stacks/tasks.yml up download-production-data",
     "tasks:db:persist-production-data": "docker-compose -f stacks/tasks.yml up persist-production-data"
   },
@@ -84,16 +85,17 @@
   },
   "devDependencies": {
     "@loopback/build": "^5.3.0",
-    "source-map-support": "^0.5.19",
+    "@loopback/eslint-config": "^6.0.5",
     "@loopback/testlab": "^3.1.2",
     "@types/node": "^10.17.21",
-    "@typescript-eslint/parser": "^2.30.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@loopback/eslint-config": "^6.0.5",
+    "@typescript-eslint/parser": "^2.30.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-plugin": "^2.2.1",
     "eslint-plugin-mocha": "^6.3.0",
+    "source-map-support": "^0.5.19",
+    "tsnodemon": "^1.2.2",
     "typescript": "~3.8.3"
   }
 }
