--- a/stacks/local.yml
+++ b/stacks/local.yml
@@ -4,10 +4,14 @@ services:
   gateway:
     image: pocket-network/gateway
     build:
-      context: .
-      dockerfile: ../Dockerfile
+      context: ..
+      dockerfile: ./Dockerfile
+    command: npm run start:watch
     env_file:
       - ../.env
+    environment:
+      - WATCH=${WATCH:-true}
+      - NODE_ENV=development
     ports:
       - 3000:3000
     volumes:
