chore: small hack to enable blockchain subdomain section parsing on local dev & switch aat plan per env var and run prettier

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ FALLBACK_URL=https://alt1.mainnet.pokt.network,https://alt2.mainnet.pokt.network
 POCKET_SESSION_BLOCK_FREQUENCY=4
 POCKET_BLOCK_TIME=1038000
 POCKET_RELAY_RETRIES=0
+
+# Choose your AAT plan
+# values: freemium, premium
+AAT_PLAN=freemium
