chore: dockerignore and a few env modifications

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,7 @@ POCKET_RELAY_RETRIES=0
 # Choose your AAT plan
 # values: freemium, premium
 AAT_PLAN=freemium
+
+# Development environment
+WATCH=true
+NODE_ENV=development
